fix(core): collapsed tab group
- fixes issue where tab group collapsed with missing width

--- a/projects/core/src/tabs/tabs-group.css
+++ b/projects/core/src/tabs/tabs-group.css
@@ -4,6 +4,7 @@
 :host {
   --padding: var(--nve-ref-space-sm) 0 0 0;
   display: block;
+  width: 100%;
 }
 
 :host(:is([alignment='start'], [alignment='end'])) {
